feat: Implement responsive mobile sidebar navigation and optimize layout for smaller screens.

--- a/index.html
+++ b/index.html
@@ -56,6 +56,13 @@
 
         <!-- Main Stage: Reading Area -->
         <main class="main-stage">
+            <button id="menuBtn" class="icon-btn mobile-menu-btn" title="Toggle Menu">
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                    <line x1="3" y1="12" x2="21" y2="12"></line>
+                    <line x1="3" y1="6" x2="21" y2="6"></line>
+                    <line x1="3" y1="18" x2="21" y2="18"></line>
+                </svg>
+            </button>
             <div class="reading-display-wrapper">
                 <div class="focus-indicator"></div>
                 <div id="readingDisplay" class="reading-display">
